<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyTestApi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="repeat_alarm_test_set_alarm">Set Alarm</string>
    <string name="repeat_alarm_test_disable_alarm">Disable Alarm</string>
    <string name="repeat_alarm_test_info">Repeat start this activity every 15s.</string>
    <string name="basic_gesture_detect_intro">
<![CDATA[
        
            
            Welcome to Basic Gesture Detect!
            In order to try this sample out, try dragging or tapping this text to see what happens!
            
        
        ]]>
    </string>
    <string name="clear_log">Clear Log</string>
    <string name="basic_multitouch_intro">
<![CDATA[
        
            
This sample demonstrates the use of MotionEvent properties to keep track of individual touches
across multiple touch events.
\n\nTouch the screen with multiple fingers to show that the pointer id
(also represented by a color) does not change as new touch events are received.
            
        
        ]]>
    </string>
    <string name="basic_android_key_store_intro">
<![CDATA[
        

Welcome to the <b>Basic Android Key Store</b> sample!\n\n
This sample demonstrates how to use the Android Key Store to safely create and store
encryption keys that only your application can access.  You can also sign data
using those keys.\n\n
To create a new KeyPair, click \"Create\".\n\n
To sign some data using a KeyPair, click \"Sign\".\n\n
To verify the data using the signature provided, click \"Verify\".\n\n

        
        ]]>
    </string>
    <string name="str_create_keys">Create</string>
    <string name="str_sign_data">Sign</string>
    <string name="str_verify_data">Verify</string>
    <string name="basic_media_decoder_intro">
<![CDATA[
        
            
             This activity uses a TextureView to render the frames of a video decoded using the
             MediaCodec API.
            
        
        ]]>
    </string>
    <string name="app_video_attrib">&#169; copyright 2008, Blender Foundation / www.bigbuckbunny.org</string>
    <string name="media_effects_intro">
<![CDATA[
        
            
            This sample shows how to use the Media Effects APIs that were introduced in Android 4.0.
            These APIs let you apply effects to image frames represented as OpenGL ES 2.0 textures.
            Image frames can be images loaded from disk, frames from the device\'s camera, or other
            video streams.
            
        
        ]]>
    </string>
    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>
    <string name="none">None</string>
    <string name="autofix">Autofix</string>
    <string name="bw">Min/Max Color Intensity</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="crossprocess">Cross Process</string>
    <string name="documentary">Documentary</string>
    <string name="duotone">Duo Tone</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fish Eye</string>
    <string name="flipvert">Flip Vertical</string>
    <string name="fliphor">Flip Horizontal</string>
    <string name="grain">Grain</string>
    <string name="grayscale">Grayscale</string>
    <string name="lomoish">Lomoish</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="rotate">Rotate</string>
    <string name="saturate">Saturate</string>
    <string name="sepia">Sepia</string>
    <string name="sharpen">Sharpen</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>
    <string name="media_recorder_intro">
<![CDATA[
        

This sample uses the camera/camcorder as the A/V source for the MediaRecorder API.
A TextureView is used as the camera preview which limits the code to API 14+. This
can be easily replaced with a SurfaceView to run on older devices.

        
        ]]>
    </string>
    <string name="btnCapture">capture</string>
    <string name="storage_client_intro">
<![CDATA[
        
            
            Using the OPEN_DOCUMENT intent, a client app can access a list of Document Providers
            on the device, and choose a file from any of them.
            \n\nTo demonstrate this, click the button below to open up the Storage Access Framework
            interface, and choose an image on your device.  It will be displayed in this app.
            
        
        ]]>
    </string>
    <string name="storage_client_btn">Show Me The Image</string>
    <string name="storage_provider_intro">
<![CDATA[
        
            
            \nA simple implementation of a documents provider using the storage access framework in
            Android 4.4.
            
        
        ]]>
    </string>
    <string name="storage_provider_menu_item">Log in</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="logged_in_info">You are currently logged in, which means the documents in MyCloud are visible to other applications.</string>
    <string name="logged_out_info">You are currently logged out, so MyCloud is not visible as a document provider.</string>
    <string name="root_summary">cloudy with a chance of &#8230;</string>
    <string name="key_logged_in">logged_in</string>
    <string name="basic_networking_intro">
<![CDATA[
        
            
            This sample demonstrates how to use the ConnectivityManager to determine if you have
            a network connection, and if so, what type of connection it is.
            \n\nA "NetworkInfo" object is retrieved from the ConnectivityManager, which contains information
            on the active connection, and then the connection type is printed to an on-screen console.
            
        
        ]]>
    </string>
    <string name="test_text">Test</string>
    <string name="clear_text">Clear</string>
    <string name="wifi_connection">The active connection is wifi.</string>
    <string name="mobile_connection">The active connection is mobile.</string>
    <string name="no_wifi_or_mobile">No wireless or mobile connection.</string>
    <string name="bluetooth_chat_intro">
<![CDATA[
        
            
            This application allows two Android devices to carry out two-way text chat over
            Bluetooth. It demonstrates all the fundamental Bluetooth API capabilites, such as:
              (1) Scanning for other Bluetooth devices
              (2) Querying the local Bluetooth adapter for paired Bluetooth devices
              (3) Establishing RFCOMM channels/sockets
              (4) Connecting to a remote device
              (5) Transfering data over Bluetooth
            
        
        ]]>
    </string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="network_connect_intro">
<![CDATA[
        
            
            This sample demonstrates how to connect to the network and fetch raw HTML using
            HttpURLConnection. AsyncTask is used to perform the fetch on a background thread.
            
        
        ]]>
    </string>
    <string name="welcome_message">Welcome to Network Connect!
        Click FETCH to fetch the first 500 characters of raw HTML from www.baidu.com.</string>
    <string name="fetch_text">Fetch</string>
    <string name="connection_error">Connection error.</string>
    <string name="actionbar_compat_basic_intro">
<![CDATA[
        
            
            This sample shows you how to use ActionBarCompat to create a basic Activity which
            displays action items. It covers inflating items from a menu resource, as well as adding
            an item in code. Items that are not shown as action items on the Action Bar are
            displayed in the action bar overflow.
            
        
        ]]>
    </string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>
    <string name="actionbar_compat_listpopup_intro">
<![CDATA[
        
            
            This sample shows you how to use {@link android.support.v7.widget.PopupMenu PopupMenu}
            from ActionBarCompat to create a list, with each item having a dropdown menu.
            
        
        ]]>
    </string>
    <string name="menu_remove">Remove</string>
    <string name="content_open_popup">Open Popup Menu</string>
    <string name="actionbar_compat_shared_provider_intro">
<![CDATA[
        
            
            This sample shows you how a provide a context-sensitive ShareActionProvider with
            ActionBarCompat, backwards compatible to API v7.
            
        
        ]]>
    </string>
    <string name="menu_share">Share</string>
    <string name="quote_1">Expectation is the root of all heartache - William Shakespeare</string>
    <string name="quote_2">The true sign of intelligence is not knowledge but imagination - Albert
        Einstein</string>
    <string name="quote_3">As for me, all I know is that I know nothing - Socrates</string>
    <string name="actionbar_compat_styled_intro">
<![CDATA[
        
            
            This sample shows you how to use ActionBarCompat with a customized theme. It utilizes a
            split action bar when running on a device with a narrow display, and show three tabs.
            
        
        ]]>
    </string>
    <string name="main_description">This is a basic Activity showing an Action Bar which has been styled.</string>
    <string name="advanced_immersive_mode_intro">
<![CDATA[
        
            
            \n\n\n\"Immersive Mode\", added in Android 4.4, improves the \"hide full screen\" and
            \"hide nav bar\" modes, by letting users swipe the bars in and out.  This sample
            lets the user experiment with immersive mode by seeing how it interacts
            with some of the other UI flags related to full-screen apps.
            
        
        ]]>
    </string>
    <string name="basic_immersive_mode_intro">
<![CDATA[
        
            
            \"Immersive Mode\" is a new UI mode which improves \"hide full screen\" and
            \"hide nav bar\" modes, by letting users swipe the bars in and out.  This sample
            demonstrates how to enable and disable immersive mode programmatically.
            
        
        ]]>
    </string>
    <string name="basic_immersive_mode_menu_item">Toggle Immersive Mode!</string>
</resources>